--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ repositories {
 }
 
 dependencies {
-	implementation("software.amazon.awssdk:dynamodb:2.25.19")
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'software.amazon.awssdk:dynamodb:2.25.19'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -29,6 +31,11 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+// update submodule
+task copyYML(type: Copy){
+	copy {
+		from './chat-config'
+		include "*.yml"
+		into './src/main/resources'
+	}
 }
