--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 # Custom Add
 /.idea/
 /.gradle/
-
+/build/
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
