fix: yml파일 업로드 제거

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,java,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,java,gradle
+*-cognito.yml
+*-dynamodb.yml
 
 # Custom Add
 /.idea/
