--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,11 +7,11 @@ on:
 
 env:
   AWS_REGION: ap-northeast-2
-  ECR_REPOSITORY: your-ecr-repo-name
-  ECS_CLUSTER: your-ecs-cluster-name
-  ECS_SERVICE: your-ecs-service-name
+  ECR_REPOSITORY: 416536687282.dkr.ecr.ap-northeast-2.amazonaws.com
+  ECS_CLUSTER: to2-ecs-cluster
+  ECS_SERVICE: to2-ws-test-service-zw1depoj
   ECS_TASK_DEFINITION: task-definition.json
-  CONTAINER_NAME: your-container-name
+  CONTAINER_NAME: ws_test
   IMAGE_TAG: latest
 
 jobs:
