--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,9 @@ env:
   AWS_REGION: ap-northeast-2
   ECR_REPOSITORY: 416536687282.dkr.ecr.ap-northeast-2.amazonaws.com
   ECS_CLUSTER: to2-ecs-cluster
-  ECS_SERVICE: to2-ws-test-service-zw1depoj
+  ECS_SERVICE: to2-task-definition-service-ovxd3686
   ECS_TASK_DEFINITION: task-definition.json
-  CONTAINER_NAME: ws_test
+  CONTAINER_NAME: to2-first
   IMAGE_TAG: latest
 
 jobs:
