fix: ci/cd 서브모듈 자동 풀

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,12 @@ jobs:
           submodules: recursive
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
+      - name: Checkout submodules to origin/main
+        run: |
+            git submodule update --init --recursive
+            git submodule foreach 'git checkout origin/main || true'
+            git submodule foreach 'git pull origin main || true'
+
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
